--- a/C14_data.Rmd
+++ b/C14_data.Rmd
@@ -13,7 +13,9 @@ output:
                         tidy = FALSE)
 ```
 
-# Denise edits on 19 April 2020
+# Denise edits on 30 April 2020
+
+The code for method 1 (Compute lm by grouping ABC together) and method 2 (Compute lm for  ABC separately) is completed. The last steps are removing values that are unusual.
 
 ```{r}
 library(dplyr)
@@ -22,7 +24,7 @@ library(ggplot2)
 library(broom)
 ```
 
-## Read C14 data
+# 1. Read C14 data
 ```{r}
 C14_DPM <- readxl::read_excel("TAN1810 Adriana samples complete _final_AGR_1.0.xlsx", sheet = "Sheet1") %>%
   dplyr::select (Cycle, EXP, STN, DEPTH, SAMPLE, `Vial code`, `sorting population`, `Cells sorted`, DPM1, `SA in DPM (aproximation)`) %>%   
@@ -57,11 +59,10 @@ hist(C14_DPM_Dark$dpm_dark)
 mean(C14_DPM_Dark$dpm_dark)
 ```
 
-
 ```{r}
 C14_DPM_corrected <- left_join(C14_DPM,C14_DPM_Dark ) %>% 
   filter (vial != "D") %>% 
-  # DV - The next line sets dpm_dark to average dpm_dark if no value. Checked with histogram above.
+  # DV - The next line replace dpm_dark to average dpm_dark if no value. Checked with histogram above.
   mutate(dpm_dark = case_when (is.na(dpm_dark) ~ mean(dpm_dark, na.rm = TRUE),
                                TRUE ~ dpm_dark))  %>% 
   # DV - The next line set dpm_correct to zero if negative, as negative values are all close to zero.
@@ -74,55 +75,13 @@ C14_DPM_corrected
   
 ```
 
-## Method 2 - Compute lm for  ABC separately
 
-### Plots
-Do plots for each group. One regression line based on the EXP, Sample and Populations
-
-```{r fig.height=15, fig.width=10}
- ggplot(data = C14_DPM_corrected, aes(x=cells_sorted, y=dpm_corrected, color=population, shape=vial)) +
-  geom_point() + stat_smooth(method="lm", se=FALSE) +
-  # DV - Set the y_scale to free so that graph is more easy to read
-  facet_grid(rows=vars(exp), cols=vars(sample), scales = "free_y") +
-  scale_color_viridis_d()
-```
-
-
-
-### Do linear model
-
-y = ax + b
-
-See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.html
-
-```{r}
- C14_DPM_model_3 <- C14_DPM_corrected %>%
-  group_by(cycle, exp, station, depth, sample, population, vial, SA) %>% 
-  tidyr::nest() %>% 
-  mutate(
-    fit = purrr::map(data, ~ lm(dpm_corrected ~ cells_sorted, data = .x)),
-    tidied = purrr::map(fit, tidy)
-  ) %>% 
-  unnest(tidied)
-
-C14_DPM_model_output_3 <- C14_DPM_model_3 %>% 
-  dplyr::select(exp:population, term, estimate) %>% 
-  pivot_wider(names_from="term", values_from ="estimate" ) %>% 
-  rename (slope = cells_sorted, intercept = `(Intercept)`)
-
-C14_DPM_model_output_3
-  
-```
-
-
-## Include DIC
+# 2. Include DIC
 
 Import DIC data from Andres. I will use this data to join with the DPM model output. The corrected data frame will have the DIC. The data will join based on the common columns: station and depth. 
 
-### Create DIC table
+## Create DIC table
 ```{r}
-
-# DV - Read the help for Excel you can choose the number of rows to skip and use select rather than base R
 DIC_data <- readxl::read_excel("Chla NPP Raw TAN1810 Sept.xlsx", sheet = "Compiled TAN1810 NPP data", skip = 5) %>% 
   select(c(1:34), -c(1,27))
 
@@ -137,116 +96,19 @@ DIC_data_corrected <- select(DIC_data, Station, `Depth m`, DIC) %>%
 DIC_data_corrected
 ```
 
+# 3. Compute based on Method 1 - Compute lm by grouping ABC together
 
-### Merge DIC/SA table and DPM output
-```{r}
-# merge tables
-pp_cal <- left_join(C14_DPM_model_output_3, DIC_data_corrected)
-pp_cal
-```
-
-# Calculate PP value, based on Daniel's formula found here:  
-https://vaulot.netlify.com/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/
-
-```{r}
-pp_cal <- mutate(pp_cal, pp = DIC*slope*(1/(SA*24))*10^9*1.05) %>%
-  ungroup() %>%
-  select( -c(station, depth)) %>%
-  filter(pp >= 0) # remove negative pp values
-
-# add missing rows for data analysis later
-pp_cal <- complete(pp_cal, nesting(cycle, exp, sample), vial, population) 
-  
-pp_cal
-```
-
-
-Compute means quickly.
-
-```{r}
- 
-pp_cal %>% 
-  group_by(population, sample) %>% 
-  summarise(pp_mean = mean(pp, na.rm = TRUE))
-
-pp_cal %>% 
-  ggplot() +
-  geom_point(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
-  xlab("Sample")
-
-pp_cal %>% 
-  ggplot() +
-  geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
-  xlab("Sample")
-```
-
-The units for pp is fgC/h/cell.
-Rii (2016) finds 5–11 fmol C/cell/day for Syn  need to convert from fmol C to fg C and from hours to day... to compare
-
-\pagebreak
-
-# Daniel solution
-
-A few things:
-
-* Please read in detail R for data science chapter on grouping data: https://r4ds.had.co.nz/transform.html
-* Please read in detail R for data science chpater on joining data:  https://r4ds.had.co.nz/relational-data.html
-* You can also go back to my class here: https://vaulot.github.io/course-ntu-data-science-2020/R-session-04-data_wrangling.html
-* When you group data you must explicty tell which operation you want to perform (e.g. n() for counting, sum(), mean ()). If not no need to group data
-* Make your code general from the start so that to extend to all cases, no need to rewrite it.  
-* It is much better to rename immediately your varibales in a clean way
-
-## Read the data
-
-```{r}
-C14_DPM <- readxl::read_excel("TAN1810 Adriana samples complete _final_AGR_1.0.xlsx", sheet = "Sheet1") %>%  # Explicit name and not position
-     select ( EXP, SAMPLE, `Vial code`, `sorting population`, `Cells sorted`, DPM1) %>%   # Can add more variables latter
-     rename(exp = EXP, 
-            sample = SAMPLE, 
-            vial = `Vial code`, 
-            population = `sorting population`, 
-            cells_sorted = `Cells sorted`, 
-            dpm = DPM1) %>% 
-     filter(exp == 1)  # You will just need to remove this line to make the code valid for all experiments
-C14_DPM
-```
-
-
-## Substract the dark DPM
-
-You need to make join based on the common variables 
-
-```{r}
- C14_DPM_Dark <- C14_DPM %>% 
-  filter(vial == "D") %>% 
-  rename(dpm_dark = dpm) %>% 
-  select(-vial) # Remove the vial column
-C14_DPM_Dark
-
-
-C14_DPM_corrected <- left_join(C14_DPM,C14_DPM_Dark ) %>% 
-  filter (vial != "D") %>% 
-  mutate(dpm_corrected = dpm - dpm_dark) %>% 
-  filter(dpm_corrected >= 0) # Remove negative values
-  
-C14_DPM_corrected  
-  
-```
-
-## Method 1 - Compute lm by grouping ABC together
-
-### Plots
+## Plots
 
 Do plots for each group. One regression line based on the EXP, Sample and Populations
-
-```{r}
+```{r fig.height=15, fig.width=10}
  ggplot(data = C14_DPM_corrected, aes(x=cells_sorted, y=dpm_corrected, color=population)) +
-  geom_point() + stat_smooth(method="lm") +
-  facet_grid(rows=vars(exp), cols=vars(sample)) +
+  geom_point() + stat_smooth(method="lm", se=FALSE) +
+  facet_grid(rows=vars(exp), cols=vars(sample), scales = "free_y") +
   scale_color_viridis_d()
 ```
 
-### Do linear model
+## Do linear model
 
 y = ax + b
 
@@ -254,7 +116,7 @@ See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.htm
 
 ```{r}
  C14_DPM_model_1 <- C14_DPM_corrected %>%
-  group_by(exp, sample, population) %>% 
+  group_by(SA, cycle, exp, station, depth, sample, population) %>% 
   tidyr::nest() %>% 
   mutate(
     fit = purrr::map(data, ~ lm(dpm_corrected ~ cells_sorted, data = .x)),
@@ -265,25 +127,67 @@ See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.htm
 C14_DPM_model_output_1 <- C14_DPM_model_1 %>% 
   select(exp:population, term, estimate) %>% 
   pivot_wider(names_from="term", values_from ="estimate" ) %>% 
-  rename (a = cells_sorted, b = `(Intercept)`)
+  rename (slope = cells_sorted, intercept = `(Intercept)`)
 
 C14_DPM_model_output_1
   
 ```
 
-## Method 2 - Compute lm for  ABC separately
+## Merge DIC/SA table and DPM output
+```{r}
+# merge tables
+pp_cal_1 <- left_join(C14_DPM_model_output_1, DIC_data_corrected)
+pp_cal_1
+```
 
-### Plots
-Do plots for each group. One regression line based on the EXP, Sample and Populations
+## Calculate PP value, based on Daniel's formula found here:  
+https://vaulot.netlify.com/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/
 
 ```{r}
+pp_cal_1 <- mutate(pp_cal_1, pp = DIC*slope*(1/(SA*24))*10^9*1.05) %>%
+  ungroup() %>%
+  select( -c(station, depth)) %>%
+  filter(pp >= 0) # remove negative pp values
+
+# add missing rows for data analysis later
+pp_cal_1 <- complete(pp_cal_1, nesting(cycle, exp, sample), population) 
+  
+pp_cal_1
+```
+
+```{r}
+ 
+pp_cal_1 %>% 
+  group_by(population, sample) %>% 
+  summarise(pp_mean = mean(pp, na.rm = TRUE))
+
+pp_cal_1 %>% 
+  ggplot() +
+  geom_point(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+
+pp_cal_1 %>% 
+  ggplot() +
+  geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+```
+
+# 4. Compute based on Method 2 - Compute lm for  ABC separately
+
+## Plots
+Do plots for each group. One regression line based on the EXP, Sample and Populations
+
+```{r fig.height=15, fig.width=10}
  ggplot(data = C14_DPM_corrected, aes(x=cells_sorted, y=dpm_corrected, color=population, shape=vial)) +
   geom_point() + stat_smooth(method="lm", se=FALSE) +
-  facet_grid(rows=vars(exp), cols=vars(sample)) +
+  # DV - Set the y_scale to free so that graph is more easy to read
+  facet_grid(rows=vars(exp), cols=vars(sample), scales = "free_y") +
   scale_color_viridis_d()
 ```
 
-### Do linear model
+
+
+## Do linear model
 
 y = ax + b
 
@@ -291,7 +195,7 @@ See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.htm
 
 ```{r}
  C14_DPM_model_2 <- C14_DPM_corrected %>%
-  group_by(exp, sample, population, vial) %>% 
+  group_by(cycle, exp, station, depth, sample, population, vial, SA) %>% 
   tidyr::nest() %>% 
   mutate(
     fit = purrr::map(data, ~ lm(dpm_corrected ~ cells_sorted, data = .x)),
@@ -300,18 +204,56 @@ See: https://cran.r-project.org/web/packages/broom/vignettes/broom_and_dplyr.htm
   unnest(tidied)
 
 C14_DPM_model_output_2 <- C14_DPM_model_2 %>% 
-  select(exp:population, term, estimate) %>% 
+  dplyr::select(exp:population, term, estimate) %>% 
   pivot_wider(names_from="term", values_from ="estimate" ) %>% 
-  rename (a = cells_sorted, b = `(Intercept)`)
+  rename (slope = cells_sorted, intercept = `(Intercept)`)
 
 C14_DPM_model_output_2
   
 ```
 
 
+## Merge DIC/SA table and DPM output
+```{r}
+# merge tables
+pp_cal_2 <- left_join(C14_DPM_model_output_2, DIC_data_corrected)
+pp_cal_2
+```
 
-### Some notes from 14 April:
-- For the purposes of Eleanor's class, I will use method 2 (compute lm values for ABC separately) for more replicates, but method 1 will be used for actual calculations later.
-- No need to check p value of the slope.
-- Will not set intercept to 0.
+## Calculate PP value, based on Daniel's formula found here:  
+https://vaulot.netlify.com/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/
 
+```{r}
+pp_cal_2 <- mutate(pp_cal_2, pp = DIC*slope*(1/(SA*24))*10^9*1.05) %>%
+  ungroup() %>%
+  select( -c(station, depth)) %>%
+  filter(pp >= 0) # remove negative pp values
+
+# add missing rows for data analysis later
+pp_cal_2 <- complete(pp_cal_2, nesting(cycle, exp, sample), vial, population) 
+  
+pp_cal_2
+```
+
+
+Compute means quickly.
+
+```{r}
+ 
+pp_cal_2 %>% 
+  group_by(population, sample) %>% 
+  summarise(pp_mean = mean(pp, na.rm = TRUE))
+
+pp_cal_2 %>% 
+  ggplot() +
+  geom_point(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+
+pp_cal_2 %>% 
+  ggplot() +
+  geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+```
+
+The units for pp is fgC/h/cell.
+Rii (2016) finds 5–11 fmol C/cell/day for Syn which corresponds to 60-132 fg /day/cell ie 2.5 to 5.5 fg/h/cell.
