--- a/C14_data.Rmd
+++ b/C14_data.Rmd
@@ -15,7 +15,7 @@ output:
 
 # Denise edits on 30 April 2020
 
-The code for method 1 (Compute lm by grouping ABC together) and method 2 (Compute lm for  ABC separately) is completed. The last steps are removing values that are unusual.
+The code for method 1 (Compute lm by grouping ABC together) and method 2 (Compute lm for  ABC separately) is completed. The last steps are removing values that are too high/low.
 
 ```{r}
 library(dplyr)
@@ -71,8 +71,8 @@ C14_DPM_corrected <- left_join(C14_DPM,C14_DPM_Dark ) %>%
   filter(!(exp == 2 & sample == "DCM" & vial == "A")) %>% # I removed this row as there was only one value for the population in the vial.
   filter(!(exp == 6 & sample == 'SUR' & vial == 'C' & population == 'Pico' & cells_sorted == 2000)) %>% # This value is too high
   filter(!(exp == 6 & sample == 'SUR' & vial == 'C' & population == 'Syn' & cells_sorted == 2000)) # This value is too high
+
 C14_DPM_corrected  
-  
 ```
 
 
