--- a/C14_data.Rmd
+++ b/C14_data.Rmd
@@ -13,7 +13,10 @@ output:
                         tidy = FALSE)
 ```
 
-# Denise edits on 30 April 2020
+# Denise edits on 11 May 2020
+
+Notes:
+
 
 The code for method 1 (Compute lm by grouping ABC together) and method 2 (Compute lm for  ABC separately) is completed. The last steps are removing values that are too high/low.
 
@@ -96,7 +99,93 @@ DIC_data_corrected <- select(DIC_data, Station, `Depth m`, DIC) %>%
 DIC_data_corrected
 ```
 
-# 3. Compute based on Method 1 - Compute lm by grouping ABC together
+# 3. Calculations for Nano (average)
+
+Data points to check for Nano calculations:
+1. exp 7: SUR and DCM. D is higher than A, B, C.
+2. exp 1: SUR. D is much higher than C
+3. exp 5: SUR. No D vial, using average dark value. However, there are very high dark values that skew the mean.
+4. exp 6: SUR. Two values for vial A
+5. exp 8: DCM values are low.
+6. to calculate lm for Nano (1000 and 2000 cells counted): 
+      exp 7: SUR and DCM
+      exp 8: SUR
+
+```{r}
+C14_DPM_nano <- readxl::read_excel("TAN1810 Adriana samples complete _final_AGR_1.0.xlsx", sheet = "Sheet1") %>%
+  dplyr::select (Cycle, EXP, STN, DEPTH, SAMPLE, `Vial code`, `sorting population`, `Cells sorted`, DPM1, `SA in DPM (aproximation)`) %>%   
+  # Can add more variables latter
+  # station and depth for adding updated DIC values
+     rename(cycle = Cycle,
+            exp = EXP, 
+            station = STN,
+            depth = DEPTH,
+            sample = SAMPLE, 
+            vial = `Vial code`, 
+            population = `sorting population`, 
+            cells_sorted = `Cells sorted`, 
+            dpm = DPM1,
+            SA = `SA in DPM (aproximation)`) %>%
+    filter(population == "Nano") %>%
+    filter(!(exp == 2 & sample == "DCM" & vial == "A"))
+C14_DPM_nano
+```
+
+## Substract the dark DPM
+Join tables based on common variables
+
+```{r}
+ C14_DPM_Dark_nano <- C14_DPM_nano %>% 
+  filter(vial == "D") %>% 
+  rename(dpm_dark = dpm) %>% 
+  dplyr::select(-vial)  # Remove the vial column
+C14_DPM_Dark_nano
+# Check the values of dpm dark with histogram.
+hist(C14_DPM_Dark_nano$dpm_dark)
+mean(C14_DPM_Dark_nano$dpm_dark)
+```
+```{r}
+C14_DPM_corrected_nano <- left_join(C14_DPM_nano,C14_DPM_Dark_nano) %>% 
+  filter (vial != "D") %>% 
+  # DV - The next line replace dpm_dark to average dpm_dark if no value. Checked with histogram above.
+  mutate(dpm_dark = case_when (is.na(dpm_dark) ~ mean(dpm_dark, na.rm = TRUE),
+                               TRUE ~ dpm_dark))  %>% 
+  # DV - The next line set dpm_correct to zero if negative, as negative values are all close to zero.
+  mutate(dpm_corrected = case_when (dpm >= dpm_dark ~ dpm - dpm_dark,
+                                    TRUE ~0)) 
+C14_DPM_corrected_nano
+```
+
+## Merge DIC/SA table and DPM output, calculate mean
+```{r}
+# merge tables
+pp_cal_nano <- left_join(C14_DPM_corrected_nano, DIC_data_corrected) %>%
+  group_by(SA, population, cycle, DIC, exp, sample) %>%
+  mutate(mean_dpm_corrected=mean(dpm_corrected)) %>% #calculate mean
+  select(-vial, -dpm, -dpm_dark, -station, -depth, -dpm_corrected) %>%
+  distinct() #remove duplicates
+
+pp_cal_nano
+```
+
+## Calculate PP value, based on Daniel's formula found here:  
+https://vaulot.netlify.com/2018/05/20/compute-primary-production-based-on-single-cell-c14-uptake/
+
+```{r} 
+pp_cal_nano <- mutate(pp_cal_nano, pp = DIC*mean_dpm_corrected*(1/(SA*24*1000))*10^9*1.05) %>% #divide by 1000 cells sorted
+  ungroup() %>%
+  filter(pp >= 0) # remove negative pp values
+
+# add missing rows for data analysis later
+pp_cal_nano <- complete(pp_cal_nano, nesting(cycle, exp, sample), population) %>%
+  select(-SA, -DIC)%>%
+  ungroup()
+  
+pp_cal_nano
+```
+
+
+# 3. Compute based on Method 1 for pico and syn - Compute lm by grouping ABC together
 
 ## Plots
 
@@ -107,6 +196,11 @@ Do plots for each group. One regression line based on the EXP, Sample and Popula
   facet_grid(rows=vars(exp), cols=vars(sample), scales = "free_y") +
   scale_color_viridis_d()
 ```
+
+Data points to check:
+1. exp 4: SUR: pico. repeated vial B.
+2. exp 8: DCM is 0.
+
 
 ## Do linear model
 
@@ -156,6 +250,13 @@ pp_cal_1
 ```
 
 ```{r}
+pp_cal_1_join<-full_join(pp_cal_1,pp_cal_nano) %>%
+  select(-SA,-intercept, -slope, -DIC, -cells_sorted, -mean_dpm_corrected)%>%
+  arrange(cycle, exp, sample, population)
+pp_cal_1_join
+```
+
+```{r}
  
 pp_cal_1 %>% 
   group_by(population, sample) %>% 
@@ -167,6 +268,22 @@ pp_cal_1 %>%
   xlab("Sample")
 
 pp_cal_1 %>% 
+  ggplot() +
+  geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+```
+
+```{r}
+pp_cal_1_join %>% 
+  group_by(population, sample) %>% 
+  summarise(pp_mean = mean(pp, na.rm = TRUE))
+
+pp_cal_1_join %>% 
+  ggplot() +
+  geom_point(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
+  xlab("Sample")
+
+pp_cal_1_join %>% 
   ggplot() +
   geom_boxplot(aes(x= str_c(population,sample,  sep=" "), y = pp)) +
   xlab("Sample")
